2005-10-09  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile:
	* autogen.sh: New script to run the various autotools to generate
	the build system.
	* missing: Add this default automake helper script.
	* configure.in: Initialise automake, even though we don't use it,
	so that we can use aclocal to manage our m4 scripts.
	* aclocal.m4:
	* acinclude.m4: Contents of aclocal.m4 now moved to acinclude.m4.
	aclocal.m4 is now autogenerated by the aclocal tool, called from
	within autogen.
	* configure:
	* include/nsconfig.h.in: Remove autogenerated scripts from cvs.
	New strategy is to call autogen.sh on first checkout to intialise
	the build environment.
	* tcl.m4:
	* m4/tcl.m4: Move into m4 subdirectory.  Upgrade to revision 1.74
	from Tcl cvs.  Fully quote macro names (needs to go upstream).
	* .cvsignore:
	* include/.cvsignore: Ignore some new autogenerated build scripts,
	and some old ones we no longer keep in cvs.

	* nsd/nsd.h:
	* nsd/modload.c:
	* nsd/nsmain.c:
	* nsd/server.c:
	* nsd/init.tcl: Add new Tcl command ns_moduleload which loads a
	binary module into the server and calls it's initialising
	function.  Remove NsLoadModules and instead call ns_moduleload
	from the init.tcl bootstrap.  Policy about where modules are
	located and when they are loaded is now easily accessible to Tcl.
	* nsd/tclcallbacks.c:
	* nsd/tclmisc.c:
	* nsd/tclcmds.c: Add new command ns_atprestartup as a simple
	wrapper for the C equivalent.  Add new command ns_runonce which
	ensures that the given script is run only once, either globally or
	per virtual server, during the lifetime of the server process.
	This simplifies initialisation.

	* include/ns.h:
	* include/nsthread.h: MIN and MAX are defined after all, in
	sys/param.h. Include this header.
	* nsd/modload.c: Don't delete interp, de-allocate.

2005-10-08  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/rollfile.c (Ns_PurgeFiles): Quiet compiler complaints about
	an uninitialised variable, which was fine.  Add missing error