@@ -78,22 +78,14 @@ Ns_FetchPage(Ns_DString *dsPtr, char *url, char *server)
 {
     Ns_DString  ds;
     Tcl_Channel chan = NULL;
-    int         nread, fd = -1;
+    int         nread;
     char        buf[1024];
 
     Ns_DStringInit(&ds);
     Ns_UrlToFile(&ds, server, url);
-    fd = open(ds.string, O_RDONLY|O_BINARY);
-    if (fd == -1) {
-        chan = Tcl_OpenFileChannel(NULL, ds.string, "r", 0);
-    }
+    chan = Tcl_OpenFileChannel(NULL, ds.string, "r", 0);
     Ns_DStringFree(&ds);
-    if (fd >= 0) {
-        while ((nread = read(fd, buf, sizeof(buf))) > 0) {
-            Ns_DStringNAppend(dsPtr, buf, nread);
-        }
-        close(fd);
-    } else if (chan) {
+    if (chan) {
         while ((nread = Tcl_Read(chan, buf, sizeof(buf))) > 0) {
             Ns_DStringNAppend(dsPtr, buf, nread);
         }
